# eegneo

./: CMakeLists.txt  EEG_Acquisition_GUI.pro  EEG_Acquisition_GUI_zh_CN.ts  acquisition.h  acquisitionwindow.cpp  acquisitionwindow.h  acquisitionwindow.ui  analysistools.cpp  analysistools.h  charthelp.cpp  charthelp.h  charthelp.ui  choosecom.cpp  choosecom.h  dataformatload.py  dwtinfo.cpp  dwtinfo.h  dwtinfo.ui  edflib.c  enum.h  filter.cpp  filter.h  filtersetting.cpp  filtersetting.h  filtersetting.ui  globalvar.cpp  main.cpp  mainbackground.cpp  mainbackground.h  mainbackground.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  p300.cpp  p300.h  p300.ui  p300oddballsetting.cpp  p300oddballsetting.h  preprocesswindow.cpp  preprocesswindow.h  (+24 more)
app/: CMakeLists.txt  resource.qrc
app/acquisition/: CMakeLists.txt
app/acquisition/backend/inc/: backend.h  filter.h  sampler.h
app/acquisition/backend/src/: backend.cpp  eegtopo.cpp  fft.cpp  filter.cpp  main.cpp  sampler.cpp  threadpool.cpp
app/acquisition/frontend/inc/: acquisitionwindow.h  plotter.h  setinfo.h
app/acquisition/frontend/src/: acquisitionwindow.cpp  plotter.cpp
app/acquisition/frontend/ui/: setinfo.ui
app/analyzer/inc/: psdinfo.h
app/analyzer/src/: charthelp.cpp  dwtinfo.cpp  seteventchannel.cpp  wigner.cpp
app/analyzer/ui/: choosecom.ui  psd.ui  wignerinfo.ui
app/backend/: CMakeLists.txt
app/backend/acquisition/: CMakeLists.txt
app/backend/acquisition/inc/: backend.h  eegtopo.h  fft.h  file.h  filter.h  sampler.h  threadpool.h
app/backend/acquisition/src/: backend.cpp  eegtopo.cpp  file.cpp  filter.cpp  main.cpp  sampler.cpp
app/common/: common.h
app/erp/: CMakeLists.txt
app/erp/inc/: baseipc.h
app/erp/inc/eprime/: eprime.h  eprimeconfigdialog.h
app/erp/inc/self/: p300.h  selfexpchoosedialog.h
app/erp/src/: baseipc.cpp  main.cpp  p300.cpp
app/erp/src/eprime/: eprime.cpp  eprimeconfigdialog.cpp
app/erp/src/self/: p300.cpp  selfexpchoosedialog.cpp
app/erp/ui/: eprimeconfigdialog.ui  selfexpchoosedialog.ui
app/gui/: CMakeLists.txt
app/gui/acquisition/: CMakeLists.txt
app/gui/acquisition/inc/: acquisitionwindow.h  plotter.h
app/gui/acquisition/src/: acquisitionwindow.cpp  main.cpp  plotter.cpp  setinfo.cpp
app/gui/acquisition/ui/: setinfo.ui
app/gui/acquisition_analyzer/: CMakeLists.txt
app/gui/acquisition_analyzer/inc/acquisition/: acquisitionwindow.h
app/gui/acquisition_analyzer/inc/analysis/: preprocesswindow.h
app/gui/acquisition_analyzer/inc/settings/: filtersetting.h
app/gui/acquisition_analyzer/inc/utils/: workthread.h
app/gui/acquisition_analyzer/src/: main.cpp  mainwindow.cpp
app/gui/acquisition_analyzer/src/acquisition/: acquisitionwindow.cpp
app/gui/acquisition_analyzer/src/settings/: filtersetting.cpp  setinfo.cpp
app/gui/acquisition_analyzer/src/utils/: workthread.cpp
app/gui/acquisition_analyzer/ui/: acquisitionwindow.ui  mainwindow.ui
app/gui/analyzer/inc/: analysistools.h  charthelp.h  psd.h  setchannelname.h
app/gui/analyzer/src/: analysistools.cpp  psd.cpp
app/gui/analyzer/ui/: psdinfo.ui
app/gui/erp/: CMakeLists.txt
app/gui/erp/inc/: p300.h
app/gui/erp/src/: p300.cpp
app/gui/inc/: mainwindow.h
app/gui/inc/acquisition/: acquisitionwindow.h  plotter.h  wave_plotter.h
app/gui/inc/analysis/: preprocesswindow.h
app/gui/inc/erp/: p300.h
app/gui/inc/settings/: choosecom.h  p300oddballsetting.h
app/gui/inc/utils/: edf.h  mainbackground.h
app/gui/src/: main.cpp  mainwindow.cpp
app/gui/src/acquisition/: acquisitionwindow.cpp  plotter.cpp  wave_plotter.cpp
app/gui/src/analysis/: preprocesswindow.cpp
app/gui/src/erp/: p300.cpp
app/gui/src/settings/: choosecom.cpp  wignerinfo.cpp
app/gui/ui/: acquisitionwindow.ui  mainbackground.ui  p300oddballsetting.ui  setchannelname.ui  seteventchannel.ui
app/inc/: mainwindow.h
app/inc/acquisition/: acquisitionwindow.h  filter.h  sampler.h  wave_plotter.h
app/inc/analysis/: preprocesswindow.h  wigner.h
app/inc/erp/: p300.h
app/inc/settings/: dwtinfo.h  setinfo.h
app/inc/utils/: enum.h  workthread.h
app/resource/: config.json
app/sampler/: CMakeLists.txt
app/sampler/inc/: sampler.h
app/sampler/src/: main.cpp  sampler.cpp
app/scripts/: dataformatload.py  plotTopography.m  topography.py
app/src/: main.cpp  mainwindow.cpp
app/src/acquisition/: acquisitionwindow.cpp  filter.cpp  sampler.cpp  wave_plotter.cpp
app/src/analysis/: preprocesswindow.cpp
app/src/erp/: p300.cpp
app/src/settings/: setchannelname.cpp  setinfo.cpp
app/src/utils/: charthelp.cpp  globalvar.cpp
app/third/dsp/: dsp.hpp  dsp_signals.hpp
app/third/edf/: edflib.c  edflib.h
app/third/fft/: fft.cpp
app/third/iir/lib/: iir.lib  iir_d.lib  iir_static.lib
app/third/pylib/include/: pyconfig.h
app/third/usb/: libusb.lib
app/ui/: acquisitionwindow.ui  mainwindow.ui  setinfo.ui
app/utils/: config.cpp  config.h  fft.cpp  fft.h  file.cpp  file.h  filter.cpp  filter.h  ipc.cpp  ipc.h
inc/: mainwindow.h
inc/acquisition/: acquisition.h  acquisitionwindow.h
inc/analysis/: preprocesswindow.h
inc/settings/: psdinfo.h  setchannelname.h  seteventchannel.h  setinfo.h  wignerinfo.h
sampler/: CMakeLists.txt
sampler/inc/: sampler.h
sampler/src/: main.cpp  sampler.cpp
src/: main.cpp  mainwindow.cpp
src/acquisition/: acquisitionwindow.cpp
src/analysis/: preprocesswindow.cpp
src/settings/: p300oddballsetting.cpp  psdinfo.cpp
src/utils/: globalvar.cpp  mainbackground.cpp  workthread.cpp
test/: CMakeLists.txt
test/data/: AL0014_TanJunsong_EEG-rest_2020-12-16_19-34-39.vhdr  AL0014_TanJunsong_EEG-rest_2020-12-16_19-34-39.vmrk  S001R01.edf  v0020.edf
test/sampler/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
third/pylib/include/: object.h
third/qextserialport/src/: qextserialport.cpp
